# ml-template

./: .env.example  .gitignore  .gitmodules  README.TEMPLATE.md  README.md  cookiecutter.json  pyproject.toml
configs/: config.yaml
configs/experiment/: default.yaml
configs/hydra/: default.yaml
configs/meta/: default.yaml
configs/paths/: default.yaml  kaggle.yaml
experiments/: _baseline.ipynb
inferences/: _baseline.ipynb
src/: deploy.py  run.py
src/kaggle/: dataset.py  deploy.py  inference_code.py
src/utils/: log_utils.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  Makefile  pyproject.toml
{{cookiecutter.project_slug}}/configs/meta/: default.yaml
{{cookiecutter.project_slug}}/configs/paths/: default.yaml
{{cookiecutter.project_slug}}/src/: run.py
{{cookiecutter.project_slug}}/src/kaggle/: dataset.py
