[project]
name = "kaggle-hydra-template"
version = "0.1.0"
description = "A template for kaggle (or other) competitions using hydra"
authors = [
    { name = "osushinekotan", email = "" }
]
dependencies = [
    "hydra-core>=1.3.2",
    "hydra-colorlog>=1.2.0",
    "rootutils>=1.0.7",
    "pytest>=8.0.1",
    "pre-commit>=3.6.1",
    "rich>=13.7.0",
    "notebook>=7.1.0",
    "ipykernel>=6.29.2",
    # kuma_utils is local package, replace with your own (rye add kuma_utils --path ./kuma_utils)
    "kuma_utils @ file:///Users/masato/Projects/kaggle-hydra-template/kuma_utils",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
hello = "src:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.8.0",
    "ruff>=0.2.2",
    "sqlfluff>=2.3.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]


[tool.ruff]
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle warnings
    "I", # isort
    "D", # pydocstyle
]

target-version = "py311"
unfixable = ["F401", "F841"]
ignore = [
    "E501",
    "E402",
    "D105", # undocumented-magic-method
    "D107", # undocumented-public-init
    "D205", # blank-line-after-summary
    "D415" # ends-in-punctuation
]
line-length = 120

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "D104"]
"kuma_utils/*" = ["D", "F403", "F405", "E722"]

[tool.mypy]
python_version = "3.11"
allow_redefinition = true
allow_untyped_globals = false
check_untyped_defs = true
color_output = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = true
error_summary = true
ignore_missing_imports = true
implicit_reexport = true
namespace_packages = true
no_implicit_optional = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = false
disallow_any_generics = false

[[tool.mypy.overrides]]
module = [
    "kuma_utils.*",
    "tests.*",
]
ignore_errors = true
ignore_missing_imports = true
