[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.description }}"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
]
dependencies = [
    "hydra-core>=1.3.2",
    "hydra-colorlog>=1.2.0",
    "rootutils>=1.0.7",
    "pytest>=8.0.1",
    "pre-commit>=3.6.1",
    "rich>=13.7.0",
    "notebook>=7.1.0",
    "ipykernel>=6.29.2",
    "kaggle>=1.6.6",
    "transformers>=4.37.2",
    "catboost>=1.2.3",
    "lightgbm>=4.3.0",
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "polars>=0.20.10",
    "xgboost>=2.0.3",
    "scikit-learn>=1.4.1.post1",
]
readme = "README.md"
requires-python = ">= {{ cookiecutter.python_version }}"

[project.scripts]
hello = "src:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.8.0",
    "ruff>=0.2.2",
    "sqlfluff>=2.3.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]


[tool.ruff]
line-length = 120
lint.select = [
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle warnings
    "I", # isort
    "D", # pydocstyle
]
lint.unfixable = [
    "F401",  # module imported but unused
    "F841",  # local variable is assigned to but never
]
lint.ignore = [
    "E501",  # line too long
    "E402",  # module level import not at top of file
    "D100",  # missing docstring in public module
    "D102",  # missing docstring in public method
    "D104",  # missing docstring in public package
    "D105",  # missing docstring in magic method
    "D106",  # missing docstring in public nested class
    "D107",  # missing docstring in __init__
    "D203",  # 1 blank line required before class docstring
    "D213",  # multi-line docstring summary should start at the second line
    "D400",  # first line should end with a period
    "D401",  # first line should be in imperative mood
    "D407",  # missing dashed underline after section
    "D408",  # section underline should be in the line following the section's name
    "D409",  # section underline should match the length of its name
    "D410",  # missing blank line after section
    "D411",  # missing blank line before section
    "D412",  # no blank lines allowed between a section and its content
    "D413",  # missing blank line after last section
    "D414",  # missing blank line before the first section
    "D415",  # first line should end with a period, question mark, or exclamation point
    "D416",  # section name should end with a semicolon
    "D417",  # missing blank line after section name
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
exclude = ["__init__"]
python_version = "{{ cookiecutter.python_version }}"
allow_redefinition = true
allow_untyped_globals = false
check_untyped_defs = true
color_output = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = true
error_summary = true
ignore_missing_imports = true
implicit_reexport = true
namespace_packages = true
no_implicit_optional = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = false
disallow_any_generics = false

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
ignore_errors = true
ignore_missing_imports = true